Issue #3236: Return small longs from PyLong_FromString.